[package]
name = "gaemstone"
authors = ["copygirl"]
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
bitvec = "0.17.4"
num-traits = "0.2.12"
rand = "0.7.3"
amethyst = { version = "0.15.0", features = ["gltf"] }
log = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
